--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,2 +1,11 @@
-.env*
+# --- Environment files (ignore everywhere) ---
+.env
+.env.*
 !.env.example
+
+# (Optional: common noise)
+node_modules/
+dist/
+build/
+.DS_Store
+Thumbs.db
